gitops/manifests/jellyfin-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      port: 8096
      targetPort: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: jellyfin
subsets:
  - addresses:
      - ip: 10.0.30.10
    ports:
      - port: 8096
        name: http
